fix width of the browsercast controls such that it does not cause an horizontal scrollbar

--- a/css/browsercast.css
+++ b/css/browsercast.css
@@ -1,7 +1,7 @@
 #browsercast {
 	position: absolute;
 	top: 5px; left: 5px;
-	width: 100%;
+        right: 5px;
 }
 
 #browsercast-audio {
